RESOLVED FIXED35546
Don't use uint that does not exist on Windows, but unsigned that is present in all ANSI C
https://bugs.webkit.org/show_bug.cgi?id=35546
Summary Don't use uint that does not exist on Windows, but unsigned that is present i...
Fridrich Strba
Reported 2010-03-01 14:27:56 PST
Created attachment 49753 [details] Patch replacing uint by unsigned Patch replacing uint by unsigned
Attachments
Patch replacing uint by unsigned (1.43 KB, patch)
2010-03-01 14:27 PST, Fridrich Strba
levin: review-
levin: commit-queue-
Patch replacing uint by unsigned including the link to this honourable bug report (1.48 KB, patch)
2010-03-01 23:59 PST, Fridrich Strba
no flags
David Levin
Comment 1 2010-03-01 15:12:57 PST
Comment on attachment 49753 [details] Patch replacing uint by unsigned > Index: WebCore/ChangeLog > +2010-03-01 Fridrich Strba <fridrich.strba@bluewin.ch> > + > + Reviewed by NOBODY (OOPS!). > + > + Use unsigned instead of uint which does not exist on windows You should have a link to the bug here. (I would r+ and say fix this on landing but I don't think you have commit bit.)
Fridrich Strba
Comment 2 2010-03-01 23:59:09 PST
Created attachment 49786 [details] Patch replacing uint by unsigned including the link to this honourable bug report
Xan Lopez
Comment 3 2010-03-02 00:01:57 PST
Comment on attachment 49786 [details] Patch replacing uint by unsigned including the link to this honourable bug report r=me
WebKit Commit Bot
Comment 4 2010-03-02 11:50:39 PST
Comment on attachment 49786 [details] Patch replacing uint by unsigned including the link to this honourable bug report Clearing flags on attachment: 49786 Committed r55420: <http://trac.webkit.org/changeset/55420>
WebKit Commit Bot
Comment 5 2010-03-02 11:50:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.