2010-03-02  Fridrich Strba  <fridrich.strba@bluewin.ch>

Reviewed by Xan Lopez.

        Use unsigned instead of uint which does not exist on windows
        https://bugs.webkit.org/show_bug.cgi?id=35546

        * platform/graphics/gtk/ImageGtk.cpp:
        (WebCore::getCairoSurfacePixel):
        (WebCore::getGdkPixbufPixel):

Canonical link: https://commits.webkit.org/46721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55420 268f45cc-cd09-0410-ab3c-d52691b4dbfc